[package]
name = "zayden-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "*", default-features = false }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
# version = "*"
default-features = false
features = ["rustls_backend", "client", "gateway", "builder"]
