[package]
name = "zayden-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { version = "*", default-features = false }
cron = { version = "*", default-features = false }
serenity = { version = "*", default-features = false, features = [
    "rustls_backend",
    "client",
    "gateway",
    "builder",
] }
sqlx = { version = "*", default-features = false, features = ["any"] }
